refacor: fix button size on firefox , redirect to profile page on success login

--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -18,7 +18,6 @@
     font-weight: 300;
   }
   .hero__left_show {
-    display: block;
     margin-bottom: space(3);
   }
 }
